[package]
name = "ubiquitous-bassoon"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.43"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
redis = {version="0.21.2", features=["r2d2"]}
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.67"
