[package]
name = "ubiquitous-bassoon"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.8.0"
r2d2 = "0.8.9"
redis = {version="0.21.2", features=["r2d2"]}
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.67"
tokio = {version="1.11.0", features=["full"]}
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

